# mbs-pipeline

./: Dockerfile  README.md  pyproject.toml  settings.py
config/freddie_mac/: pipeline_config.yaml  schema.json  schema_mapper.json
mbs_pipeline/: enums.py  load.py  pipeline.py  schema.py  scraper.py  transform.py  utils.py  writer.py
prepayment-risk-app/: docker-compose.yml
prepayment-risk-app/backend/: Dockerfile  main.py  prepayment_risk.db  pyproject.toml
prepayment-risk-app/frontend/: Dockerfile  package.json
prepayment-risk-app/frontend/public/: index.html
prepayment-risk-app/frontend/src/: App.js
