[tool.poetry]
name = "mbs_pipeline"
version = "0.1.0"
description = ""
authors = ["Vamsi Meda <vamsidharmeda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.22.0"
requests = "^2.32.3"
pandas = "^2.2.2"
bs4 = "^0.0.2"
tqdm = "^4.66.4"
aiohttp = "^3.9.5"
pyspark = "^3.5.1"
aiofiles = "^24.1.0"
pyarrow = "^16.1.0"
google-cloud-storage = "^2.17.0"
google-cloud-bigquery = "^3.25.0"
python-dotenv = "^1.0.1"
tenacity = "^8.4.2"
black = "^24.4.2"
flake8 = "^7.1.0"
ruff = "^0.5.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
