[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vamsi Meda <vamsidharmeda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.68.0"
uvicorn = "0.15.0"
sqlalchemy = "1.4.23"
pydantic = "1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
